--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "request": "^2.88.2"
+    "query-string": "^6.13.1",
+    "request": "^2.88.2",
+    "url-parse": "^1.4.7"
   }
 }
